Implement MCMC densificastion and prunning strategy

--- a/configs/apps/colmap_3dgut.yaml
+++ b/configs/apps/colmap_3dgut.yaml
@@ -5,6 +5,7 @@ defaults:
   - /base_3dgut.yaml
   - /dataset: colmap
   - /initialization: colmap
+  - /strategy: gs
   - _self_
 
 # overwrite of default parameters
