--- a/configs/paper/3dgrt/nerf_synthetic_ours_reference_inference.yaml
+++ b/configs/paper/3dgrt/nerf_synthetic_ours_reference_inference.yaml
@@ -12,7 +12,7 @@ val_frequency: 999999
 
 model:
   background:
-    color: 
-    
+    color: black
+
 render.particle_kernel_density_clamping: true
 render.min_transmittance: 0.03
