--- a/configs/apps/colmap_3dgrt.yaml
+++ b/configs/apps/colmap_3dgrt.yaml
@@ -5,6 +5,7 @@ defaults:
   - /base.yaml
   - /dataset: colmap
   - /initialization: colmap
+  - /strategy: gs
   - _self_
 
 # overwrite of default parameters
