--- a/configs/apps/colmap_3dgut_mcmc.yaml
+++ b/configs/apps/colmap_3dgut_mcmc.yaml
@@ -3,10 +3,21 @@
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
   - /base_3dgut.yaml
-  - /dataset: scannetpp
+  - /dataset: colmap
   - /initialization: colmap
-  - /strategy: gs
+  - /strategy: mcmc
   - _self_
 
 # overwrite of default parameters
 val_frequency: 999999 # never validate
+
+model:
+  default_density: 0.5
+  default_scale_factor: 0.1
+
+loss:
+  use_opacity: true
+  lambda_opacity: 0.01
+
+  use_scale: true
+  lambda_scale: 0.01
