--- a/configs/apps/nerf_synthetic_3dgrt_mcmc.yaml
+++ b/configs/apps/nerf_synthetic_3dgrt_mcmc.yaml
@@ -5,12 +5,21 @@ defaults:
   - /base.yaml
   - /dataset: nerf
   - /initialization: random
-  - /strategy: gs
+  - /strategy: mcmc
   - _self_
 
 # overwrite of default parameters
 val_frequency: 999999 # never validate
 
 model:
+  default_density: 0.5
+  default_scale_factor: 0.1
   background:
     color: black
+
+loss:
+  use_opacity: true
+  lambda_opacity: 0.01
+
+  use_scale: true
+  lambda_scale: 0.01
