--- a/configs/apps/nerf_synthetic_3dgut.yaml
+++ b/configs/apps/nerf_synthetic_3dgut.yaml
@@ -5,6 +5,7 @@ defaults:
   - /base_3dgut.yaml
   - /dataset: nerf
   - /initialization: random
+  - /strategy: gs
   - _self_
 
 # overwrite of default parameters
