--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -49,6 +49,7 @@ model:
   density_activation: sigmoid
   scale_activation: exp
   default_density: 0.1
+  default_scale_factor: 1.0
   optimize_density: true
   optimize_features_albedo: true
   optimize_features_specular: true
@@ -63,63 +64,18 @@ model:
     increase_frequency: 1000 # unmask more feature dimensions every N global steps
     increase_step: 1 # sh: how many degrees unmasked per step | mlp: how many dims unmasked per step
 
-  density_decay:
-    gamma: 0.99
-    start_iteration: -1 # 500
-    end_iteration: -1 # 15000
-    frequency: 50
-
   background:
     name: background-color # one of [skip-background, background-color]
     color: black # one of [black, white, random] needs to be defined if name == background-color
 
   print_stats: true
 
-  densify:
-    params: positions # one of [positions, positions_gradient_norm, features_albedo]
-    frequency: 300 # densification_interval in 3DGS with default value 100
-    start_iteration: 500 # densify_from_iter in 3DGS default value 500
-    end_iteration: 15000 # densify_until_iter in 3DGS default value 15_000
-    clone_grad_threshold: 0.0002 # Called densify_grad_threshold in 3DGS with default value 0.0002
-    split_grad_threshold: 0.0002 # Called densify_grad_threshold in 3DGS with default value 0.0002
-    relative_size_threshold: 0.01 # Gaussians larger than relative_size_threshold * scene_extent will be split not cloned. Called percent_dense in 3DGS with default value 0.01
-    split:
-      n_gaussians: 2 # Hardcoded to 2 in 3DGS
-    share_density: false # share the original gaussian density among the new ones
-
-  # They use the same values for pruning and densification so check the above values
-  prune:
-    frequency: 100
-    start_iteration: 500
-    end_iteration: 15000
-    density_threshold: 0.01 # All Gaussians with the density lower than this will be pruned away
-
-  prune_weight:
-    frequency: 100
-    start_iteration: -1
-    end_iteration: -1
-    weight_threshold: 0.5
-
-  prune_scale:
-    frequency: 100
-    start_iteration: -1
-    end_iteration: -1
-    threshold: 1.0
-
-  # Start and end iteration are not used in 3DGS
-  reset_density:
-    frequency: 3000 # Opacity reset interval in 3DGS default value 3000
-    start_iteration: 0
-    end_iteration: ${model.densify.end_iteration}
-    # This parameter is hardcoded in the 3DGS to 0.01
-    new_max_density: 0.01 # The density of the all the Gaussians will be set to min(density, this)
-
 checkpoint:
   iterations: ${int_list:[ 7000, 30000 ]}
 
 optimizer:
   type: adam # We only support adam for now
-  lr: 0.01
+  lr: 0.0
   eps: 1.e-15
   params:
     positions:
@@ -183,10 +139,18 @@ render:
 loss:
   use_l1: true
   lambda_l1: 0.8
+  
   use_l2: false
   lambda_l2: 1.0
+
   use_ssim: true
   lambda_ssim: 0.2
+
+  use_opacity: false
+  lambda_opacity: 0.0
+
+  use_scale: false
+  lambda_scale: 0.0
 
 hydra:
   output_subdir: null
