--- a/configs/paper/3dgut/base_sorted.yaml
+++ b/configs/paper/3dgut/base_sorted.yaml
@@ -3,6 +3,7 @@
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
   - /base_3dgut.yaml
+  - /strategy: gs
   - _self_
 
 render:
