--- a/configs/paper/3dgut/unsorted_colmap.yaml
+++ b/configs/paper/3dgut/unsorted_colmap.yaml
@@ -2,7 +2,7 @@
 
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
-  - /base_3dgut.yaml
+  - base_unsorted
   - /dataset: colmap
   - /initialization: colmap
   - _self_
