revert initialization strategy, cleanup config

--- a/configs/paper/3dgrt/base_ours.yaml
+++ b/configs/paper/3dgrt/base_ours.yaml
@@ -3,6 +3,7 @@
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
   - base_ours_reference
+  - _self_
 
 optimizer.params.density.lr: 0.09
 render:
