--- a/configs/apps/scannetpp_3dgrt_mcmc.yaml
+++ b/configs/apps/scannetpp_3dgrt_mcmc.yaml
@@ -2,22 +2,12 @@
 
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
-  - /base.yaml
+  - /base_mcmc
   - /dataset: scannetpp
   - /initialization: colmap
-  - /strategy: mcmc
+  - /render: 3dgrt
   - _self_
 
 # overwrite of default parameters
 val_frequency: 999999 # never validate
-
-model:
-  default_density: 0.5
-  default_scale_factor: 0.1
-
-loss:
-  use_opacity: true
-  lambda_opacity: 0.01
-
-  use_scale: true
-  lambda_scale: 0.01
+# # @package _global_
