--- a/configs/base_gs.yaml
+++ b/configs/base_gs.yaml
@@ -1,5 +1,6 @@
 defaults:
   - _self_
+  - /strategy: gs
   - override hydra/hydra_logging: disabled
   - override hydra/job_logging: disabled
 
@@ -45,7 +46,6 @@ import_ply:
   init_global_step: 0
   
 model:
-  strategy: GSStrategy # The strategy used for densification and pruning
   density_activation: sigmoid
   scale_activation: exp
   default_density: 0.1
@@ -102,39 +102,6 @@ scheduler:
 
   density:
     type: skip
-
-render:
-  method: 3dgrt # 3dgrt or 3dgut
-  pipeline_type: reference
-  backward_pipeline_type: ${render.pipeline_type}Bwd
-  particle_kernel_degree: 4
-  particle_kernel_density_clamping: true
-  particle_kernel_min_response: 0.0113
-  particle_kernel_min_alpha: ${div:1.0,255.0}
-  particle_kernel_max_alpha: 0.99
-  particle_radiance_sph_degree: 3
-  primitive_type: instances
-  min_transmittance: 0.001
-  max_consecutive_bvh_update: 15
-  enable_normals: false
-  enable_hitcounts: true
-  enable_kernel_timings: false
-
-  splat: # 3DGUT-specific settings
-    # culling
-    rect_bounding: true
-    tight_opacity_bounding: true
-    tile_based_culling: true
-    # projection
-    n_rolling_shutter_iterations: 5
-    ut_alpha: 1.0
-    ut_beta: 2.0
-    ut_kappa: 0.0
-    ut_in_image_margin_factor: 0.1
-    ut_require_all_sigma_points_valid: false
-    # rendering
-    k_buffer_size: 0  # 0 means unsorted
-    global_z_order: true
 
 loss:
   use_l1: true
