--- a/configs/paper/3dgut/base_sorted.yaml
+++ b/configs/paper/3dgut/base_sorted.yaml
@@ -2,8 +2,8 @@
 
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
-  - /base_3dgut.yaml
-  - /strategy: gs
+  - /base_gs
+  - /render: 3dgut
   - _self_
 
 render:
