--- a/configs/apps/scannetpp_3dgut_mcmc.yaml
+++ b/configs/apps/scannetpp_3dgut_mcmc.yaml
@@ -5,7 +5,7 @@ defaults:
   - /base_mcmc
   - /dataset: scannetpp
   - /initialization: colmap
-  - /render: 3dgrt
+  - /render: 3dgut
   - _self_
 
 # overwrite of default parameters
