--- a/configs/apps/nerf_synthetic_3dgrt_mcmc.yaml
+++ b/configs/apps/nerf_synthetic_3dgrt_mcmc.yaml
@@ -10,3 +10,6 @@ defaults:
 
 # overwrite of default parameters
 val_frequency: 999999 # never validate
+
+initialization:
+  use_observation_points: false
