remove and fix config

--- a/configs/apps/colmap_3dgrt_mcmc.yaml
+++ b/configs/apps/colmap_3dgrt_mcmc.yaml
@@ -2,7 +2,7 @@
 
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
-  - /base_gs_mcmc
+  - /base_mcmc
   - /dataset: colmap
   - /initialization: colmap
   - /render: 3dgrt
@@ -10,3 +10,6 @@ defaults:
 
 # overwrite of default parameters
 val_frequency: 999999 # never validate
+
+initialization:
+  use_observation_points: false
