feat: Set up comprehensive Python testing infrastructure with Poetry
- Add Poetry package manager configuration with all dependencies
- Configure pytest with coverage reporting (80% threshold)
- Create test directory structure with unit/integration separation
- Add comprehensive shared fixtures in conftest.py
- Configure test markers (unit, integration, slow)
- Update .gitignore with testing and Poetry entries
- Add validation tests to verify infrastructure setup
- Configure Poetry scripts for 'test' and 'tests' commands

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,35 @@ results/
 thirdparty/ncore/
 
 playground/assets/
+
+# Testing related
+.pytest_cache/
+.coverage
+htmlcov/
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.tox/
+.nox/
+
+# Claude settings
+.claude/*
+
+# Poetry
+dist/
+build/
+*.egg-info/
+
+# Virtual environments
+venv/
+ENV/
+env/
+.venv/
+
+# IDE files
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
