restore requirements before merge conflict

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,5 @@ tqdm
 libigl
 pygltflib
 # --find-links https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.1.2_cu118.html
-kaolin==0.17.0
+# kaolin==0.17.0
+usd-core
