add viser viewer for training conifg

--- a/configs/base_gs.yaml
+++ b/configs/base_gs.yaml
@@ -10,6 +10,7 @@ resume: ""
 out_dir: "./runs"
 n_iterations: 30000
 with_gui: false
+with_viser_gui: false
 gui_update_from_device: true
 val_frequency: 5000
 num_workers: 24
