--- a/configs/paper/3dgrt/base_ours_reference.yaml
+++ b/configs/paper/3dgrt/base_ours_reference.yaml
@@ -13,7 +13,7 @@ render:
   particle_kernel_min_alpha: ${div:1.0,255.0}
   particle_kernel_max_alpha: 0.99
   particle_radiance_sph_degree: 3
-  primitive_type: sphere
+  primitive_type: icosahedron
   min_transmittance: 0.001
   max_consecutive_bvh_update: 15
   enable_normals: false
