Use fused instead of accumulated in terms of wording

--- a/configs/apps/cusfm_3dgut.yaml
+++ b/configs/apps/cusfm_3dgut.yaml
@@ -2,7 +2,7 @@
 
 # order in which configs override each other (/* - denotes a relative search path)
 defaults:
-  - /base_mcmc
+  - /base_gs
   - /dataset: colmap
   - /initialization: fused_point_cloud
   - /render: 3dgut
@@ -10,6 +10,7 @@ defaults:
 
 # overwrite of default parameters
 val_frequency: 999999 # never validate
+
 
 initialization:
   fused_point_cloud_path: ???  # Path to fused point cloud PLY file to be provided by user at runtime
