--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ dataclasses_json
 # JIT compilation
 setuptools <72.1.0
 # Fused-ssim
-git+https://github.com/rahul-goel/fused-ssim@1272e21a282342e89537159e4bad508b19b34157
+fused-ssim @ git+https://github.com/rahul-goel/fused-ssim@1272e21a282342e89537159e4bad508b19b34157
 # Playground
 tqdm
 libigl
