Add PPISP post-processing (#183)
* Add PPISP post-processing

* Apply formatting

* Fix for newer pybind11 versions

* Bump PPISP version to be able to use TORCH_CUDA_ARCH_LIST

* Add PTX string to TORCH_CUDA_ARCH_LIST

This is needed for running on Blackwell GPUs

* Fix syntax for fused-ssim dependency in requirements

* Update README news

Added recent news updates and support information.

---------

Co-authored-by: Qi Wu <wilson.over.cloud@gmail.com>
Co-authored-by: Qi Wu <qiwu@nvidia.com>

--- a/configs/base_gs.yaml
+++ b/configs/base_gs.yaml
@@ -125,6 +125,14 @@ loss:
   use_scale: false
   lambda_scale: 0.0
 
+# Post-processing configuration
+post_processing:
+  method: null # Possible values: null, "ppisp"
+  # Number of extra distillation steps after main training (only for "ppisp").
+  # When > 0, enables distillation mode: Gaussians and PPISP params are frozen,
+  # only the controller is trained for these additional steps.
+  n_distillation_steps: 5000
+
 hydra:
   output_subdir: null
   job:
